test/fail/exceptions/ex.lly
class error(msg: String) < Exception(msg) {  }
